--- a/tests/integration/targets/podman_play/tasks/root-play.yml
+++ b/tests/integration/targets/podman_play/tasks/root-play.yml
@@ -11,6 +11,7 @@
 
     - name: Delete all pods leftovers from tests
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ item }}"
         state: absent
       loop:
@@ -20,12 +21,14 @@
 
     - name: Play kube file
       containers.podman.podman_play:
+        executable: "{{ test_executable | default('podman') }}"
         kube_file: /tmp/play-root1.yaml
         state: started
       register: play1
 
     - name: Play same kube file again
       containers.podman.podman_play:
+        executable: "{{ test_executable | default('podman') }}"
         kube_file: /tmp/play-root1.yaml
         state: started
       register: play2
@@ -38,6 +41,7 @@
 
     - name: Recreate play
       containers.podman.podman_play:
+        executable: "{{ test_executable | default('podman') }}"
         kube_file: /tmp/play-root1.yaml
         state: started
         recreate: true
@@ -50,6 +54,7 @@
 
     - name: Check 'created' after 'started'
       containers.podman.podman_play:
+        executable: "{{ test_executable | default('podman') }}"
         kube_file: /tmp/play-root1.yaml
         state: created
       register: play4
@@ -61,6 +66,7 @@
 
     - name: Run with configmap
       containers.podman.podman_play:
+        executable: "{{ test_executable | default('podman') }}"
         kube_file: /tmp/play-root3.yaml
         state: started
         recreate: true
@@ -75,6 +81,7 @@
 
     - name: Check if pod is running well
       containers.podman.podman_pod_info:
+        executable: "{{ test_executable | default('podman') }}"
         name: web-deploy-root-pod-0
       register: info1
 
@@ -87,6 +94,7 @@
 
     - name: Delete all pods leftovers from tests
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ item }}"
         state: absent
       loop:
