--- a/tests/integration/targets/podman_pod/tasks/network-tests.yml
+++ b/tests/integration/targets/podman_pod/tasks/network-tests.yml
@@ -2,12 +2,14 @@
 - name: Remove pod nettest
   become: true
   containers.podman.podman_pod:
+    executable: "{{ test_executable | default('podman') }}"
     name: nettest
     state: absent
 
 - name: Run pod with {{ item.first_net }}
   become: true
   containers.podman.podman_pod:
+    executable: "{{ test_executable | default('podman') }}"
     name: nettest
     state: started
     network: "{{ item.first_net }}"
@@ -15,6 +17,7 @@
 - name: Run pod again with {{ item.first_net }}
   become: true
   containers.podman.podman_pod:
+    executable: "{{ test_executable | default('podman') }}"
     name: nettest
     state: started
     network: "{{ item.first_net }}"
@@ -28,6 +31,7 @@
 - name: Run pod changed from {{ item.first_net }} to {{ item.next_net }}
   become: true
   containers.podman.podman_pod:
+    executable: "{{ test_executable | default('podman') }}"
     name: nettest
     state: started
     network: "{{ item.next_net }}"
