--- a/tests/integration/targets/podman_pod/tasks/root-pod.yml
+++ b/tests/integration/targets/podman_pod/tasks/root-pod.yml
@@ -11,16 +11,19 @@
 
     - name: Delete all pods leftovers from tests
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: absent
 
     - name: Create and start pod
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: started
 
     - name: Create and start pod
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: started
       register: pod1_info
@@ -32,6 +35,7 @@
 
     - name: Add DNS to pod
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: started
         dns:
@@ -45,6 +49,7 @@
 
     - name: Remove DNS from pod
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: started
       register: pod3_info
@@ -62,6 +67,7 @@
 
     - name: Start pod with networks
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: started
         network:
@@ -76,6 +82,7 @@
 
     - name: Start pod with networks again
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: started
         network:
@@ -90,6 +97,7 @@
 
     - name: Start pod with one network
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: started
         network: net2
@@ -102,6 +110,7 @@
 
     - name: Start pod without networks
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: started
       register: pod7_info
@@ -113,6 +122,7 @@
 
     - name: Start pod with ports for idempotency and ipv6
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: pod1
         state: started
         ports:
@@ -132,6 +142,7 @@
 
     - name: Start pod with ports for idempotency and ipv6 again
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: pod1
         state: started
         ports:
@@ -153,6 +164,7 @@
 
     - name: Delete all pods leftovers from tests
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "rootpod"
         state: absent
 
