--- a/tests/integration/targets/podman_pod_info/tasks/main.yml
+++ b/tests/integration/targets/podman_pod_info/tasks/main.yml
@@ -19,6 +19,7 @@
 
     - name: Get missing pod info
       containers.podman.podman_pod_info:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ pod_name }}"
       register: nonexist
 
@@ -29,6 +30,7 @@
 
     - name: Get all missing pods info
       containers.podman.podman_pod_info:
+        executable: "{{ test_executable | default('podman') }}"
       register: nonexist2
 
     - name: Check info for missing pod
@@ -42,6 +44,7 @@
 
     - name: Get all pods info
       containers.podman.podman_pod_info:
+        executable: "{{ test_executable | default('podman') }}"
       register: info
 
     - name: Check info for pod
@@ -56,6 +59,7 @@
 
     - name: Get specific pod info
       containers.podman.podman_pod_info:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ pod_name }}"
       register: info2
 
@@ -75,6 +79,7 @@
 
     - name: Get specific another pod info
       containers.podman.podman_pod_info:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ pod_name }}"
       register: info3
 
@@ -85,6 +90,7 @@
 
     - name: Get pods info
       containers.podman.podman_pod_info:
+        executable: "{{ test_executable | default('podman') }}"
       register: info4
 
     - name: Check info for pods
