Prepare tests to use custom executable, part 5
Signed-off-by: Sagi Shnaidman <sshnaidm@redhat.com>

--- a/tests/integration/targets/podman_container/tasks/main.yml
+++ b/tests/integration/targets/podman_container/tasks/main.yml
@@ -50,6 +50,7 @@
 
     - name: Ensure image doesn't exist
       containers.podman.podman_image:
+        executable: "{{ test_executable | default('podman') }}"
         name: alpine:3.7
         state: absent
 
