--- a/tests/integration/targets/podman_pod_info/tasks/main.yml
+++ b/tests/integration/targets/podman_pod_info/tasks/main.yml
@@ -14,6 +14,7 @@
 
     - name: Make sure pod doesn't exist
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ pod_name }}"
         state: absent
 
@@ -40,6 +41,7 @@
 
     - name: Create test pod
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ pod_name }}"
 
     - name: Get all pods info
@@ -75,6 +77,7 @@
 
     - name: Create another test pod
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ pod_name }}_1"
 
     - name: Get specific another pod info
@@ -102,6 +105,7 @@
 
     - name: Make sure pod doesn't exist
       containers.podman.podman_pod:
+        executable: "{{ test_executable | default('podman') }}"
         name: "{{ item }}"
         state: absent
       loop:
