--- a/tests/integration/targets/podman_container/tasks/main.yml
+++ b/tests/integration/targets/podman_container/tasks/main.yml
@@ -533,7 +533,7 @@
     - name: Check podman_actions
       assert:
         that:
-          - "'podman rm -f testidem' in remove.podman_actions"
+          - "'rm -f testidem' in remove.podman_actions.0"
 
     # - name: Create a pod
     #   shell: podman pod create --name testidempod
