--- a/.github/workflows/podman_container.yml
+++ b/.github/workflows/podman_container.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - '.github/workflows/podman_container.yml'
-      - 'ci/*.yml'
+      - 'ci/playbooks/*.yml'
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_container.yml'
       - 'plugins/modules/podman_container.py'
@@ -17,7 +17,7 @@ on:
   pull_request:
     paths:
       - '.github/workflows/podman_container.yml'
-      - 'ci/*.yml'
+      - 'ci/playbooks/*.yml'
       - 'ci/run_containers_tests.sh'
       - 'ci/playbooks/containers/podman_container.yml'
       - 'plugins/modules/podman_container.py'
@@ -31,7 +31,7 @@ on:
 jobs:
 
   test_podman_container:
-    name: Podman container ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-latest' }}
+    name: v${{ matrix.podman_version }} py-${{ matrix.python-version }} ${{ matrix.ansible-version }}
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     defaults:
       run:
@@ -41,13 +41,24 @@ jobs:
       matrix:
         ansible-version:
           - ansible<2.10
-          - git+https://github.com/ansible/ansible.git@stable-2.12
           - git+https://github.com/ansible/ansible.git@stable-2.13
           - git+https://github.com/ansible/ansible.git@devel
         os:
           - ubuntu-22.04
         python-version:
           - 3.9
+        podman_version:
+          - '4.2.0'
+          - 'ubuntu_default'
+        exclude:
+          - os: ubuntu-22.04
+            python-version: 3.9
+            ansible-version: ansible<2.10
+            podman_version: '4.2.0'
+          - os: ubuntu-22.04
+            python-version: 3.9
+            ansible-version: git+https://github.com/ansible/ansible.git@devel
+            podman_version: '4.2.0'
 
     steps:
 
@@ -92,90 +103,11 @@ jobs:
 
       - name: Run collection tests for podman container
         run: |
-          export PATH=~/.local/bin:$PATH
-
-          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
-          fi
-
-          echo $ANSIBLE_CONFIG
-          command -v ansible-playbook
-          pip --version
-          python --version
-          ansible-playbook --version
-
-          ansible-playbook -vv ci/playbooks/pre.yml \
-          -e host=localhost \
-          -i localhost, \
-          -e ansible_connection=local \
-          -e setup_python=false
-
-          TEST2RUN=podman_container ./ci/run_containers_tests.sh
-        shell: bash
-
-  test_podman_container_with_pip:
-    name: Podman container w/ pip ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-latest' }}
-    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
-    defaults:
-      run:
-        shell: bash
-    strategy:
-      fail-fast: false
-      matrix:
-        ansible-version:
-          - ansible<2.10
-          #- git+https://github.com/ansible/ansible.git@stable-2.10
-        os:
-          - ubuntu-22.04
-        python-version:
-          - 3.9
-
-    steps:
-
-      - name: Check out repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Upgrade pip and display Python and PIP versions
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y python*-wheel python*-yaml
-          python -m pip install --upgrade pip
-          python -V
-          pip --version
-
-      - name: Set up pip cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ github.ref }}-units-VMs
-          restore-keys: |
-            ${{ runner.os }}-pip-
-            ${{ runner.os }}-
-
-      - name: Install Ansible ${{ matrix.ansible-version }}
-        run: python3 -m pip install --user --force-reinstall --upgrade '${{ matrix.ansible-version }}'
-
-      - name: Build and install the collection tarball
-        run: |
-          export PATH=~/.local/bin:$PATH
+          export PATH=~/.local/bin:/usr/local/bin:$PATH
 
           echo "Run ansible version"
           command -v ansible
           ansible --version
-          python3 -m pip install --user --force-reinstall --upgrade .
-
-
-      - name: Run collection tests for podman container
-        run: |
-          export PATH=~/.local/bin:$PATH
-          export ANSIBLE_COLLECTIONS_PATHS=~/.local/share/ansible/collections
-
           export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
           if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
@@ -191,7 +123,8 @@ jobs:
           -e host=localhost \
           -i localhost, \
           -e ansible_connection=local \
+          -e test_podman_version=${{ matrix.podman_version }} \
           -e setup_python=false
 
-          TEST2RUN=podman_container ./ci/run_containers_tests.sh
+          TEST2RUN=podman_container ./ci/run_containers_tests.sh ${{ matrix.podman_version }}
         shell: bash
