--- a/.github/workflows/podman_container_info.yml
+++ b/.github/workflows/podman_container_info.yml
@@ -31,7 +31,7 @@ on:
 jobs:
 
   test_podman_container_info:
-    name: Podman container info ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-latest' }}
+    name: v${{ matrix.podman_version }} py-${{ matrix.python-version }} ${{ matrix.ansible-version }}
     runs-on: ${{ matrix.os || 'ubuntu-latest' }}
     defaults:
       run:
@@ -44,9 +44,17 @@ jobs:
           # - git+https://github.com/ansible/ansible.git@stable-2.11
           - git+https://github.com/ansible/ansible.git@devel
         os:
-          - ubuntu-latest
+          - ubuntu-22.04
         python-version:
           - 3.9
+        podman_version:
+          - '4.2.0'
+          - 'ubuntu_default'
+        exclude:
+          - os: ubuntu-22.04
+            python-version: 3.9
+            ansible-version: git+https://github.com/ansible/ansible.git@devel
+            podman_version: '4.2.0'
 
     steps:
 
@@ -80,18 +88,22 @@ jobs:
 
       - name: Build and install the collection tarball
         run: |
+          export PATH=~/.local/bin:$PATH
+
+          echo "Run ansible version"
+          command -v ansible
+          ansible --version
           rm -rf /tmp/just_new_collection
           ~/.local/bin/ansible-galaxy collection build --output-path /tmp/just_new_collection --force
           ~/.local/bin/ansible-galaxy collection install -vvv --force /tmp/just_new_collection/*.tar.gz
 
       - name: Run collection tests for podman container info
         run: |
-          export PATH=~/.local/bin:$PATH
+          export PATH=~/.local/bin:/usr/local/bin:$PATH
 
           echo "Run ansible version"
           command -v ansible
           ansible --version
-
           export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
           if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
             export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
@@ -107,7 +119,8 @@ jobs:
           -e host=localhost \
           -i localhost, \
           -e ansible_connection=local \
+          -e test_podman_version=${{ matrix.podman_version }} \
           -e setup_python=false
 
-          TEST2RUN=podman_container_info ./ci/run_containers_tests.sh
+          TEST2RUN=podman_container_info ./ci/run_containers_tests.sh ${{ matrix.podman_version }}
         shell: bash
