--- a/.github/workflows/podman_containers.yml
+++ b/.github/workflows/podman_containers.yml
@@ -1,30 +1,30 @@
 name: Podman multi-containers
 
 on:
-  push:
-    paths:
-      - '.github/workflows/podman_containers.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_containers.yml'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
-      - 'plugins/module_utils/podman/common.py'
-      - 'plugins/modules/podman_containers.py'
-      - 'tests/integration/targets/podman_containers/**'
-    branches:
-      - master
-  pull_request:
-    paths:
-      - '.github/workflows/podman_containers.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_container.yml'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
-      - 'plugins/module_utils/podman/common.py'
-      - 'plugins/modules/podman_containers.py'
-      - 'tests/integration/targets/podman_containers/**'
+  # push:
+  #   paths:
+
+
+
+  #     - 'ci/playbooks/containers/podman_containers.yml'
+  #     - 'plugins/modules/podman_container.py'
+  #     - 'plugins/module_utils/podman/podman_container_lib.py'
+  #     - 'plugins/module_utils/podman/common.py'
+  #     - 'plugins/modules/podman_containers.py'
+  #     - 'tests/integration/targets/podman_containers/**'
+  #   branches:
+  #     - master
+  # pull_request:
+  #   paths:
+
+
+
+  #     - 'ci/playbooks/containers/podman_container.yml'
+  #     - 'plugins/modules/podman_container.py'
+  #     - 'plugins/module_utils/podman/podman_container_lib.py'
+  #     - 'plugins/module_utils/podman/common.py'
+  #     - 'plugins/modules/podman_containers.py'
+  #     - 'tests/integration/targets/podman_containers/**'
   schedule:
     - cron: 4 0 * * *  # Run daily at 0:03 UTC
 
