--- a/tests/integration/targets/podman_container_idempotency/tasks/idem_all.yml
+++ b/tests/integration/targets/podman_container_idempotency/tasks/idem_all.yml
@@ -180,6 +180,68 @@
       tag: sometag
     command: 1h
 
+- name: Run container with mounted /dev/fuse
+  containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: "{{ idem_image }}"
+    name: idempotency
+    state: started
+    command: 1h
+    device:
+      - /dev/fuse
+  register: test15
+
+- name: Run container with mounted /dev/fuse again
+  containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: "{{ idem_image }}"
+    name: idempotency
+    state: started
+    command: 1h
+    device:
+      - /dev/fuse
+  register: test16
+
+- name: Run container with mounted /dev/fuse:/dev/fuse
+  containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: "{{ idem_image }}"
+    name: idempotency
+    state: started
+    command: 1h
+    device:
+      - /dev/fuse:/dev/fuse
+  register: test17
+
+- name: Run container with mounted /dev/fuse third time
+  containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: "{{ idem_image }}"
+    name: idempotency
+    state: started
+    command: 1h
+    device:
+      - /dev/fuse
+  register: test18
+
+- name: Run container without mounted device
+  containers.podman.podman_container:
+    executable: "{{ test_executable | default('podman') }}"
+    image: "{{ idem_image }}"
+    name: idempotency
+    state: started
+    command: 1h
+  register: test19
+
+- name: Check info with mounted devices
+  assert:
+    that:
+      - test15 is changed
+      - test16 is not changed
+      - test17 is not changed
+      - test18 is not changed
+      - test19 is changed
+
 - name: Remove test container
   containers.podman.podman_container:
     executable: "{{ test_executable | default('podman') }}"
