--- a/.github/workflows/podman_containers.yml
+++ b/.github/workflows/podman_containers.yml
@@ -31,8 +31,8 @@ on:
 jobs:
 
   test_podman_containers:
-    name: Podman multi containers ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-latest' }}
-    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+    name: Podman multi containers ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
     defaults:
       run:
         shell: bash
