--- a/.github/workflows/collection-continuous-integration.yml
+++ b/.github/workflows/collection-continuous-integration.yml
@@ -65,7 +65,7 @@ jobs:
         python-version:
           - 3.8
         include:
-          - runner-os: ubuntu-latest
+          - runner-os: ubuntu-20.04
             runner-python-version: 2.7
             ansible-version: ansible<2.10
             python-version: 2.7
