--- a/.github/workflows/podman_container_info.yml
+++ b/.github/workflows/podman_container_info.yml
@@ -31,8 +31,8 @@ on:
 jobs:
 
   test_podman_container_info:
-    name: Podman container info ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-latest' }}
-    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+    name: Podman container info ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
     defaults:
       run:
         shell: bash
@@ -44,7 +44,7 @@ jobs:
           # - git+https://github.com/ansible/ansible.git@stable-2.11
           - git+https://github.com/ansible/ansible.git@devel
         os:
-          - ubuntu-latest
+          - ubuntu-22.04
         python-version:
           - 3.9
 
