--- a/.github/workflows/podman_image.yml
+++ b/.github/workflows/podman_image.yml
@@ -27,8 +27,8 @@ on:
 jobs:
 
   test_podman_image:
-    name: Podman image ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-latest' }}
-    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+    name: Podman image ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
     defaults:
       run:
         shell: bash
