--- a/.github/workflows/podman_login_info.yml
+++ b/.github/workflows/podman_login_info.yml
@@ -25,8 +25,8 @@ on:
 jobs:
 
   test_podman_login_info:
-    name: Podman login info ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-latest' }}
-    runs-on: ${{ matrix.os || 'ubuntu-latest' }}
+    name: Podman login info ${{ matrix.ansible-version }}-${{ matrix.os || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
     defaults:
       run:
         shell: bash
